<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <!--<item
        android:id="@+id/navigation_bank"
        android:icon="@drawable/ic_rupee_indian"
        android:title="@string/recharge"/>-->

    <!--<item
        android:id="@+id/navigation_scheme"
        android:icon="@drawable/ic_star"
        android:title="@string/scheme" />-->
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_star"
        android:title="@string/myscheme" />
    <item
       android:id="@+id/navigation_payagnent"
       android:icon="@drawable/ic_save_money"
       android:title="@string/payagnet" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/Notificaton" />







</menu>