<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogue_bg"
    tools:context=".DialogueFragment.ChangePasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/adapter_background"
            android:textSize="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/source_sans_pro"
            android:textAllCaps="true"
            android:text="@string/CustomerScheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/rect_edit_text"

            android:fontFamily="@font/source_sans_pro"
            android:textAlignment="center"
            android:hint="@string/enteryouramount"
            android:textCursorDrawable="@drawable/color_cursor"

            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mCancel"
                android:textColor="@color/white"
                android:background="@drawable/adapter_background"
                android:text="@string/btn_cancel"
                android:layout_width="0dp"

                android:layout_height="40dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/mrequest"
                android:layout_marginLeft="6dp"
                android:textColor="@color/white"
                android:background="@drawable/adapter_background"
                android:text="@string/save"
                android:layout_width="0dp"

                android:layout_height="40dp"
                android:layout_weight="1"/>



        </LinearLayout>

        <TextView
            android:id="@+id/password"
            android:textSize="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/source_sans_pro"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</RelativeLayout>