<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:weightSum="12">


            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:padding="20dp"


                android:orientation="vertical">



                <ImageView

                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_murugapa_round"/>
                <TextView
                    android:id="@+id/appName"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/appversion"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Version 1.0"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/source_sans_pro"
        android:text="Features :"/>

    <include
        layout="@layout/settings_view_divider" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"


            android:layout_gravity="center"
            >

            <TextView

                android:textStyle="bold"
                android:padding="5dp"
                android:textAllCaps="true"
                android:fontFamily="@font/source_sans_pro"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/textsize"
                android:text="@string/Addnew"/>






            <TextView
                android:id="@+id/Log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/source_sans_pro"
                android:layout_gravity="center_vertical"
                android:text="@string/OnlineRecharge"
                android:textAllCaps="true"
                android:textSize="@dimen/textsize" />



            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:fontFamily="@font/source_sans_pro"
                android:textSize="@dimen/textsize"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/Notificaton"/>

            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:fontFamily="@font/source_sans_pro"
                android:textSize="@dimen/textsize"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/Update"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/source_sans_pro"
                android:padding="5dp"
                android:text="@string/Daily"
                android:textAllCaps="true"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>