<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogue_bg"
    tools:context=".DialogueFragment.ChangePasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/adapter_background"
            android:textSize="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/source_sans_pro"
            android:textAllCaps="true"
            android:text="@string/ForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/rect_edit_text"
            android:drawableStart="@drawable/ic_phone"
            android:fontFamily="@font/source_sans_pro"
            android:textAlignment="center"
            android:hint="@string/regmobilenumber"
            android:textCursorDrawable="@drawable/color_cursor"

            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mCancel"
                android:textColor="@color/white"
                android:background="@drawable/adapter_background"
                android:text="@string/btn_cancel"
                android:layout_width="0dp"

                android:layout_height="40dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/mrequest"
                android:layout_marginLeft="6dp"
                android:textColor="@color/white"
                android:background="@drawable/adapter_background"
                android:text="@string/request"
                android:layout_width="0dp"

                android:layout_height="40dp"
                android:layout_weight="1"/>



        </LinearLayout>



        <EditText
            android:gravity="center"
            android:id="@+id/editnumber"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rect_edit_text"

            android:fontFamily="@font/source_sans_pro"
            android:textAlignment="center"
            android:hint="@string/code"

            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp">
            <requestFocus />
        </EditText>






        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignIn"
            android:layout_gravity="center"
            style="@style/loginButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="VERIFY"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/password"
            android:textSize="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/source_sans_pro"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSignIn"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </LinearLayout>




</RelativeLayout>